--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 	<h1> Welcome to the to-do list Application </h1>
 	<p> Hello World </p>
 	<h3>This is Shruti</h3>
+	<i> My underegraduate was electonics and communication from India</i>
 </body>
 </html>
