--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 	<p> Hello World </p>
 	<h3>This is Shruti</h3>
 	<i> My underegraduate was electonics and communication from India</i>
+	<div> I'm studying Network Security and Information Assurance</div>
 </body>
 </html>
