--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 	<h3>This is Shruti</h3>
 	<i> My underegraduate was electonics and communication from India</i>
 	<div> I'm studying Network Security and Information Assurance</div>
+	<b>This is very interesting course</b>
 </body>
 </html>
